pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-141-fenced_code_blocks.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/141-fenced_code_blocks.md
---
[1m[34m┄┄[0m[1m[34mfoo[0m


[33m[48;5;236mbar[K[0m


[1m[34m┄[0m[1m[34mbaz[0m
