pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-142-fenced_code_blocks.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/142-fenced_code_blocks.md
---

[32mdef[0m [33mfoo[0m([34mx[0m)
  [32mreturn[0m [95m3[0m
[32mend[0m
