pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-143-fenced_code_blocks.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/143-fenced_code_blocks.md
---

[33m[48;5;236mdef foo(x)[K[0m
[33m[48;5;236m  return 3[K[0m
[33m[48;5;236mend[K[0m
