pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-144-fenced_code_blocks.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/144-fenced_code_blocks.md
---

