pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-183-html_blocks.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/183-html_blocks.md
---
[32m  [0m[32m<!-- foo -->
[0m

[33m<!-- foo -->
[0m
